--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "This is the calulator frontend",
   "main": "index.html",
   "scripts": {
-    "start": "http-server -p8081"
+    "start": "http-server -p8080"
+  },
+  "engines": {
+    "node": "10.7.0"
   },
   "dependencies": {
     "http-server": "0.11.1"
